// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render image box with loading and with src from turkey burger 1`] = `
.emotion-0 {
  width: 100%;
  max-width: calc(50vw - 16px);
  height: 120px;
  margin-top: 8px;
}

.emotion-0>img {
  border: 1px solid #2a5077;
  object-fit: contain;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

<div
  className="emotion-0"
  onClick={[Function]}
>
  <div
    className="emotion-1"
  >
    <img
      src="ttloader.png"
      width="48px"
    />
  </div>
</div>
`;

exports[`should render image box with loading and with src from turkey burger 2`] = `
.emotion-0 {
  width: 100%;
  max-width: calc(50vw - 16px);
  height: 120px;
  margin-top: 8px;
}

.emotion-0>img {
  border: 1px solid #2a5077;
  object-fit: contain;
}

<div
  className="emotion-0"
  onClick={[Function]}
>
  <img
    src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2020%2F03%2F20%2F1360550.jpg"
  />
</div>
`;

exports[`should render image box without loading and without src 1`] = `
.emotion-0 {
  width: 100%;
  max-width: calc(50vw - 16px);
  height: 120px;
  margin-top: 8px;
}

.emotion-0>img {
  border: 1px solid #2a5077;
  object-fit: contain;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  background: #f4f6f8;
  border: 1px solid #2a5077;
}

.emotion-1>div {
  font-family: Sura Bold;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 28px;
  margin-top: 8px;
  color: var(--ion-color-primary);
}

.emotion-1>img {
  object-fit: contain;
}

<div
  className="emotion-0"
  onClick={[Function]}
>
  <div
    className="emotion-1"
  >
    <img
      src="addImage.svg"
    />
    <div>
      Add Image
    </div>
  </div>
</div>
`;
